--- a/wp-content/plugins/05-recipe-card-esnext/package.json
+++ b/wp-content/plugins/05-recipe-card-esnext/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "recipe-card-esnext",
+	"name": "05-recipe-card-esnext",
 	"version": "1.1.0",
 	"private": true,
 	"description": "Example: Recipe Card (ESNext).",
